--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,3 +1,25 @@
 .header {
     background-color: $dark-blue;
 }
+
+.header__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: $s-size;
+}
+
+.header__title {
+    color: white;
+    text-decoration: none;
+
+    h1 {
+        margin: 0;
+    }
+}
+
+
+
+.header__button {
+    background: none;
+}
